--- a/etc/genesis_db/genesis_db.conf
+++ b/etc/genesis_db/genesis_db.conf
@@ -12,3 +12,12 @@ config = logging.yaml
 
 [HS256]
 # encryption_key = secret
+
+[user_api]
+bind_host = 0.0.0.0
+
+[status_api]
+bind_host = 0.0.0.0
+
+[orch_api]
+bind_host = 0.0.0.0
