--- a/setup.cfg
+++ b/setup.cfg
@@ -28,4 +28,8 @@ packages =
 [entry_points]
 console_scripts =
     genesis-db-user-api = genesis_db.cmd.user_api:main
-    genesis-db-builder-agent = genesis_db.cmd.builder:main
+    genesis-db-gservice = genesis_db.cmd.gservice:main
+    genesis-db-status-api = genesis_db.cmd.status_api:main
+    genesis-db-orch-api = genesis_db.cmd.orch_api:main
+gcl_sdk_universal_agent =
+    PGCapabilityDriver = genesis_db.agent.universal.drivers.pg:PGCapabilityDriver
