--- a/etc/systemd/genesis-db-status-api.service
+++ b/etc/systemd/genesis-db-status-api.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Genesis Db Builder Agent
+Description=Genesis DB Status API
 After=network-online.target
 
 [Service]
@@ -8,7 +8,7 @@ Restart=on-failure
 RestartSec=5s
 KillSignal=SIGINT
 ExecStartPre=/bin/sleep 2
-ExecStart=genesis-db-builder-agent --config-file /etc/genesis_db/genesis_db.conf
+ExecStart=genesis-db-status-api --config-file /etc/genesis_db/genesis_db.conf
 
 [Install]
 WantedBy=multi-user.target
