--- a/genesis/genesis.yaml
+++ b/genesis/genesis.yaml
@@ -14,15 +14,41 @@
 #    License for the specific language governing permissions and limitations
 #    under the License.
 
+# Build section. It specifies the build process of the project
 build:
+
+  # Dependencies of the project
   deps:
     - dst: /opt/genesis_db
       path:
         src: ../../genesis_db
+      exclude:
+        - .venv
+        - .tox
+    
+    # Take SDK from a local path for development purposes.
+    - dst: /opt/gcl_sdk
+      optional: true
+      path:
+        env: LOCAL_GENESIS_SDK_PATH
 
+  # List of elements in the project
   elements:
+    # List of images in the element
     - images:
       - name: genesis-db
         format: raw
         profile: genesis_base
-        script: images/install.sh
+        script: images/cp_install.sh
+
+        # Override image build parameters, for instance disk size
+        override:
+          disk_size: "6G"
+      - name: genesis-db-pg
+        format: raw
+        profile: genesis_base
+        script: images/pg_install.sh
+
+        # Override image build parameters, for instance disk size
+        override:
+          disk_size: "6G"
