--- a/etc/genesis_db/genesis_pg_agent.conf
+++ b/etc/genesis_db/genesis_pg_agent.conf
@@ -4,7 +4,7 @@ debug = True
 
 [universal_agent]
 uuid5_name = dbaas
-payload_path = /var/lib/genesis/genesis_db/payload.yaml
+payload_path = /var/lib/genesis/genesis_db/payload.json
 orch_endpoint = http://dbaas-cp.local.genesis-core.tech:11011
 status_endpoint = http://dbaas-cp.local.genesis-core.tech:11012
 caps_drivers = PGCapabilityDriver
