--- a/setup.cfg
+++ b/setup.cfg
@@ -31,5 +31,6 @@ console_scripts =
     genesis-db-gservice = genesis_db.cmd.gservice:main
     genesis-db-status-api = genesis_db.cmd.status_api:main
     genesis-db-orch-api = genesis_db.cmd.orch_api:main
+    genesis-db-bootstrap = genesis_db.cmd.bootstrap:main
 gcl_sdk_universal_agent =
     PGCapabilityDriver = genesis_db.agent.universal.drivers.pg:PGCapabilityDriver
