--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,12 +37,24 @@ jobs:
             $REPO_ENDPOINT_PUT/${PROJECT_NAME}/${VERSION}/genesis-db.raw.gz
           curl -X PUT --upload-file output/genesis-db-pg.raw.gz \
             $REPO_ENDPOINT_PUT/${PROJECT_NAME}/${VERSION}/genesis-db-pg.raw.gz
+          curl -X PUT --upload-file output/genesis-db-pg.raw.gz \
+            $REPO_ENDPOINT_PUT/${PROJECT_NAME}/${VERSION}/lab-genesis-db-pg.raw.gz
 
           # Temporary upload step is done in the build script
           echo "${VERSION}" > "${ARTIFACTS_PATH}/version.txt"
-
-      - name: Upload the build artifacts
-        uses: actions/upload-artifact@v4
+          mv output/*.raw.gz "${ARTIFACTS_PATH}/"
+      - name: Set current date as env variable
+        id: date
+        run: |
+          r=$(date -u +'%Y.%m.%d')
+          echo "DATE=$r" >> $GITHUB_OUTPUT
+      - name: Publish image (for tags only)
+        if: ${{ startsWith(github.ref, 'refs/tags/') }}
+        uses: svenstaro/upload-release-action@v2
         with:
-          name: build_artifacts
-          path: artifacts/
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./artifacts/*.gz
+          tag: ${{ github.ref }}
+          release_name: ${{ steps.date.outputs.DATE }} (${{ github.ref_name }})
+          overwrite: true
+          file_glob: true
