Improved DBaaS manifest with import/export sections
- Added import, export sections in the manifest
- Added definition of DNS record `dbaas-cp` in the manifest
- Adaptation to changes in the core agent filtering.
- Fixed corruption of payload.json of universal agent service.

Signed-off-by: Anton Kremenetsky <anton.kremenetsky@gmail.com>

--- a/etc/genesis_db/core_agent.conf
+++ b/etc/genesis_db/core_agent.conf
@@ -8,7 +8,6 @@ connection_pool_max_size = 4
 
 [agent]
 uuid5_name = core_agent
-project_id = 12345678-c625-4fee-81d5-f691897b8142
 payload_path = /var/lib/genesis/genesis_db/core_agent/payload.json
 target_fields_path = /var/lib/genesis/genesis_db/core_agent/target_fields.json
 orch_client = http
@@ -23,3 +22,6 @@ em_dbaas_types_postgres_instances_databases = genesis_db.user_api.dm.models:PGDa
 
 [filters]
 em_dbaas_types_postgres_versions = description:12345678-c625-4fee-81d5-f691897b8142
+em_dbaas_types_postgres_instances = project_id:12345678-c625-4fee-81d5-f691897b8142
+em_dbaas_types_postgres_instances_users = project_id:12345678-c625-4fee-81d5-f691897b8142
+em_dbaas_types_postgres_instances_databases = project_id:12345678-c625-4fee-81d5-f691897b8142
