--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ oslo.config>=3.22.2,<10.0.0  # Apache-2.0
 restalchemy>=14.1.1,<15.0.0  # Apache-2.0
 gcl_iam>=0.15.0,<1.0.0  # Apache-2.0
 gcl_looper>=1.0.0,<=2.0.0  # Apache-2.0
-gcl_sdk>=0.8.3,<=1.0.0  # Apache-2.0
+gcl_sdk>=0.9.0,<1.0.0  # Apache-2.0
 bjoern>=3.2.2,<4.0.0  # BSD License (BSD-3-Clause)
 PyYAML>=6.0.0,<7.0.0  # MIT
